--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -21,6 +21,10 @@ table {
 
 tr:nth-child(even) {background-color: #c8c8c8;}
  
+thead{
+  background-color:#ffffff ;
+}
+
 
 th, td {
   padding: 15px;
